
#==============================================================
RELEASE_NOTES for spectrometer module

See README for module info
#==============================================================

R1.0.4  6-Jun-2024  M. Dunning (mdunning)
    Add PV to set event code for EVR timestamping
    Add ability to build IOC binary (Basil Aljamal)
    Exclude timing modules for PCDS (Basil Aljamal)

R1.0.3  23-May-2024  M. Dunning (mdunning)
    Add EVR timestamping

R1.0.2  27-Mar-2024  M. Dunning (mdunning)
    Add trig mode feature, which allows external triggering 

R1.0.1  10-Jul-2023  M. Dunning (mdunning)
    Decouple seabreeze source code.  Source code now lives in $PACKAGE_TOP.

R1.0.0  19-Apr-2023  M. Dunning (mdunning)
    Inital version

# End of file
